# mi_proyecto_ml

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
data/: descarga_datos.py
docs/: conf.py  index.rst
src/ml/: __init__.py
src/mnist_loader/: __init__.py  loader.py  preprocessor.py  utils.py  visualizer.py
src/mnist_loader/scripts/: .gitignore  example_usage.py
tests/: conftest.py  test_example.py  test_mnist_loader.py
